--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </h2>
         <div>
             <div class="cityinfo">
-                <img src="shangrilla.jpg" alt="view" height="350px" width="500px">
+                <img src="shangrilla.jpg" alt="view" height="550px" Apply here0px">
             </div>
             <div class="cityinfo" id="info">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sit quia amet cupiditate quod
@@ -211,6 +211,31 @@
            
             </div>
         </div>
+    </div>
+    <div class="services">
+        <h1 id="mainService">Our Services</h1>
+        <div class="subservice">
+            <h2 class="subheading">Air Ticketing</h2>
+            <p class="servicetext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ab quisquam dignissimos necessitatibus neque accusamus excepturi ducimus omnis. Corporis rerum consequatur.</p>
+            <a href="#" class="reserveseat">Apply here</a>
+            
+        </div>
+        <div class="subservice">
+            <h2 class="subheading">Tour Packages</h2>
+            <p class="servicetext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ab quisquam dignissimos necessitatibus neque accusamus excepturi ducimus omnis. Corporis rerum consequatur.</p>
+            <a href="#" class="reserveseat">Apply here</a>
+        </div>
+        <div class="subservice">
+            <h2 class="subheading">Hotel Accomodation</h2>
+            <p class="servicetext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ab quisquam dignissimos necessitatibus neque accusamus excepturi ducimus omnis. Corporis rerum consequatur.</p>
+            <a href="#" class="reserveseat">Apply here</a>
+        </div>
+        <div class="subservice">
+            <h2 class="subheading">Ski Experience</h2>
+            <p class="servicetext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ab quisquam dignissimos necessitatibus neque accusamus excepturi ducimus omnis. Corporis rerum consequatur.</p>
+            <a href="#" class="reserveseat">Apply here</a>
+        </div>
+
     </div>
 </body>
 
