Added footer section

--- a/index.html
+++ b/index.html
@@ -237,6 +237,47 @@
         </div>
 
     </div>
+    <div>
+        <h1 style="height: 600px; width: 100%;">Blog</h1>
+    </div>
+    <footer>
+        <div class="footer-info">
+            <div class="quick-links">
+                <h3 class="footerheading">Quick Links</h3>
+                <ul class="footernav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Destinations</a></li>
+                    <li><a href="#">Packages</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Our Services</a></li>
+                    <li><a href="#">Our Plans</a></li>
+                    <li><a href="#">Resorts</a></li>
+                </ul>
+            </div>
+            <div class="newsletter-section">
+                <h3 class="footerheading">Subscribe to our Daily Newsletter</h3>
+                <form action="#" method="post" id="newsletter-form">
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        <div class="social-media">
+            <h3 class="footerheading">Connect with Us</h3>
+            <ul class="footernav">
+                <!-- img src="facebook.png" alt=""height="25px" width="25px" -->
+            <a href="#" target="_blank">Facebook</a><br>
+            <a href="#" target="_blank">Instagram</a><br>
+            <a href="#" target="_blank">Twitter</a><br>
+            <a href="#" target="_blank">Youtube</a><br>
+        </ul>
+        </div>
+    </div>
+        <div class="contact-info">
+            <p>Phone: +1 (123) 456-7890</p>
+            <p>Address: 123 Travel Street, Cityville, Country</p>
+        </div>
+        <p>&copy; 2024 Your Travel Agency. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
